--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,12 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,800;1,300&display=swap"
       rel="stylesheet">
     <!-- google font end -->
+
+    <!-- icons -->
+    <!-- <link rel="stylesheet"
+      type="text/css"
+      href="../src/styling/css/icons/styles.css" /> -->
+    <!--end iconts  -->
     <title>React App</title>
   </head>
 
